Revert "QuizzEngine - Refactor data model to remove rightAnswer field"
This reverts commit 39dd52861b4165be28ebf5afaba19456498d06bd.